snapshot-tests/tests/snapshots/parser__bad_nesting__key_then_dotted.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[duplicate-key]: duplicate key: `a`
  ┌─ key_then_dotted:3:10
  │
2 │         a = 1
  │         - first key instance
3 │         [a.b]
  │          ^ duplicate key
